@@ -5,5 +5,5 @@ using System.Reflection;
 [assembly: AssemblyProduct ("MonoDevelop")]
 [assembly: AssemblyTitle ("XML Editor")]
 [assembly: AssemblyDescription ("XML Editor")]
-[assembly: AssemblyVersion ("2.1.0")]
-[assembly: AssemblyCopyright ("LGPL")]
+[assembly: AssemblyVersion ("2.1.1")]
+[assembly: AssemblyCopyright ("MIT X11")]
